gcc/testsuite/rust/compile/missing_closing_paren.rs
fn foo() {
    (""; // { dg-error "unexpected token .*" }
}
